added tests for all services